@@ -1,5 +1,5 @@
 <!-- 
-     $Id: MapGen.dtd,v 1.1 2006/08/22 16:35:56 jettero Exp $
+     $Id: MapGen.dtd,v 1.2 2006/08/22 19:19:45 jettero Exp $
 -->
 
 <!ELEMENT MapGen (option*, tile_group*, map)>
@@ -13,11 +13,18 @@
 <!ATTLIST row ypos CDATA #REQUIRED>
 <!ATTLIST tile xpos CDATA #REQUIRED>
 <!ATTLIST tile type CDATA #REQUIRED>
-<!ATTLIST closure dir CDATA #REQUIRED>
-<!ATTLIST closure type CDATA #REQUIRED>
-<!ATTLIST option name CDATA #REQUIRED>
-<!ATTLIST option value CDATA #REQUIRED>
 <!ATTLIST tile_group name CDATA #REQUIRED>
 <!ATTLIST tile_group type CDATA #REQUIRED>
 <!ATTLIST tile_group loc CDATA #REQUIRED>
 <!ATTLIST tile_group size CDATA #REQUIRED>
+
+<!ATTLIST option name   CDATA #REQUIRED>
+<!ATTLIST option value  CDATA #REQUIRED>
+
+<!ATTLIST closure dir            (north|east|south|west)   #REQUIRED>
+<!ATTLIST closure type           (room|corridor|wall|door) #REQUIRED>
+<!ATTLIST closure locked         (yes|no) #IMPLIED>
+<!ATTLIST closure stuck          (yes|no) #IMPLIED>
+<!ATTLIST closure secret         (yes|no) #IMPLIED>
+<!ATTLIST closure major_open_dir (north|east|south|west) #IMPLIED>
+<!ATTLIST closure minor_open_dir (north|east|south|west) #IMPLIED>
